--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -29,5 +29,6 @@ jobs:
     - name: Build and Push Docker image
       run: |
         docker build -t nlp-service .
-        docker tag nlp-service rumorzimages.azurecr.io/nlp-service
+        docker tag nlp-service rumorz.azurecr.io/nlp-service
         docker push rumorz.azurecr.io/nlp-service
+
